generator/k8s/jcode-init.yaml
---
# 1. 네임스페이스 생성
apiVersion: v1
kind: Namespace
metadata:
  name: jcode-test-1
  labels:
    role: jcode

---
# 7. Network Policy 설정 (watcher & jcode 통신  +++  ingress, pormetheus(monitoring))
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: watcher-networkpolicy
  namespace: jcode-test-1
spec:
  podSelector: {}  # 모든 파드에 적용 (필요에 따라 특정 라벨 선택 가능)
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: watcher
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
  policyTypes:
  - Ingress
